eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
/**
 *
 *
 *
 * - THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY -
 * - Generated by Gulp (gulp-sass).
 *
 *
 *
 *
 */


.product-card-sku { position: relative; }

.product-card-sku__name, .product-card-sku__price, .product-card-sku__name a { color: #FFF; }

.product-card-sku__name .icon, .product-card-sku__link-item .icon { font-size: 1rem; }

.product-card-sku__image-link { display: block; }

.product-card-sku__image-wrapper { position: absolute; z-index: 2; }

.product-card-sku .rendition__image { height: 54px; width: 54px; border: 1px solid #EEF0F2; background-color: #FFF; padding: 0.5rem; }

.product-card-sku__links-list { list-style-type: none; margin: 0; padding: 0; }

.product-card-sku__attr-label { margin-bottom: 5px; }

@media screen and (max-width: 991px) { .product-card-sku { margin-left: -30px; margin-right: -30px; }
  .product-card-sku__image-wrapper { left: 30px; top: 20px; }
  .product-card-sku__title-wrapper { background-color: #005EB8; position: relative; }
  .product-card-sku__name { font-family: Arial, sans-serif; font-size: 2.2rem; font-weight: bold; line-height: 2.9rem; margin-bottom: 5px; padding-left: 99px; padding-right: 40px; padding-top: 16px; }
  .product-card-sku__name .icon { height: 1rem; width: 1rem; line-height: 1rem; position: absolute; right: 30px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
  .product-card-sku__price { padding-bottom: 20px; padding-left: 99px; }
  .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.3rem; font-weight: normal; line-height: 1.7rem; background-color: #F8F8F8; padding: 12px 30px; }
  .product-card-sku__link-item-link { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
  .product-card-sku__link-item-link:hover { color: #005EB8; text-decoration: none; }
  .product-card-sku__link-item-link .link-label { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
  .product-card-sku__content { padding: 30px 30px; }
  .product-card-sku__attrs-list { padding-bottom: 16px; }
  .product-card-sku__attrs-list-item { margin-bottom: 10px; }
  .product-card-sku__attrs-list-item:last-child { margin-bottom: 0; }
  .product-card-sku__attr-label { margin-bottom: 4px; }
  .product-card-sku__description { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.8rem; } }

@media screen and (min-width: 992px) { .product-card-sku__image-wrapper { left: 20px; top: 20px; }
  .product-card-sku .rendition__image { height: 148px; width: 148px; padding: 1rem; }
  .product-card-sku__header { background-color: #005EB8; padding: 20px 120px 20px 188px; position: relative; }
  .product-card-sku__name { font-family: Arial, sans-serif; font-size: 2.6rem; font-weight: bold; line-height: 4rem; }
  .product-card-sku__name .icon { font-size: 26px; position: relative; top: 4px; }
  .product-card-sku__price { position: absolute; top: 50%; right: 20px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
  .product-card-sku__links-list { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row nowrap; -ms-flex-flow: row nowrap; flex-flow: row nowrap; }
  .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; border-right: 1px solid #FFF; margin-right: 20px; padding-right: 16px; }
  .product-card-sku__link-item:last-child { border-right: 0; }
  .product-card-sku__link-item-link .link-label { color: #FFF; }
  .product-card-sku__link-item-link:hover { color: #FFF; text-decoration: underline; }
  .product-card-sku__content { margin-top: 30px; margin-bottom: 60px; padding-left: 188px; }
  .product-card-sku__attrs-list { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row wrap; -ms-flex-flow: row wrap; flex-flow: row wrap; margin-bottom: 30px; }
  .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
  .product-card-sku__description { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }

.product-grid-results--subcategory .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }

@media screen and (max-width: 991px) { .product-grid-results--subcategory .container { width: 100%; }
  .product-grid-results--subcategory .results-list__bottom { margin-top: 0; } }

.product-card-subcategory { position: relative; width: 100%; margin-bottom: 42px; }

.product-card-subcategory__link { position: absolute; left: 0; top: 0; height: 100%; width: 100%; z-index: 1; }

.product-card-subcategory__image-wrapper { text-align: center; padding: 0 20px; position: relative; padding-top: 100%; margin-bottom: 22px; }

.product-card-subcategory .rendition__image { position: absolute; background-color: #F8F8F8; border: 1px solid #EEF0F2; max-width: 100%; top: 0; left: 0; padding: 20px; height: 100%; width: 100%; }

.product-card-subcategory__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 24px; font-weight: bold; line-height: 26px; margin-top: 18px; margin-bottom: 0; }

@media screen and (max-width: 767px) { .product-card-subcategory { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; } }

@media screen and (min-width: 768px) and (max-width: 991px) { .product-card-subcategory { width: 50%; } }

@media screen and (max-width: 991px) { .product-card-subcategory__image-wrapper { margin-left: -30px; margin-right: -30px; } }

@media screen and (min-width: 992px) { .product-card-subcategory { width: 32%; margin-right: 2%; margin-bottom: 52px; }
  .product-card-subcategory:nth-child(3n+3) { margin-right: 0; }
  .product-card-subcategory__name { font-size: 28px; line-height: 32px; } }

